--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,12 @@
     }
   ],
   "require": {
-    "php": "*",
+    "php": "^7.2",
     "ext-pcntl": "*",
     "ext-posix": "*"
+  },
+  "require-dev": {
+    "phpstan/phpstan": "^0.12"
   },
   "autoload": {
     "psr-4": {
