--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "ext-posix": "*"
   },
   "require-dev": {
-    "phpstan/phpstan": "^0.12"
+    "phpstan/phpstan": "^0.12",
+    "phpunit/phpunit": "^6.0"
   },
   "autoload": {
     "psr-4": {
